force-app/main/default/objects/Auction__c/Auction__c.object-meta.xml
<CustomObject>
    <label>Auction</label>
    <nameField>
        <displayFormat>AUC-{0000}</displayFormat>
        <label>Auction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>