force-app/main/default/objects/Auction__c/fields/Auction_Type__c.field-meta.xml
<CustomField>
    <fullName>Auction_Type__c</fullName>
    <label>Auction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>