force-app/main/default/objects/Auction__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winner</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Auctions</relationshipLabel>
    <relationshipName>Auctions</relationshipName>
    <type>Lookup</type>
</CustomField>