force-app/main/default/objects/Auction__c/recordTypes/Monthly_Auction.recordType-meta.xml
<RecordType>
    <fullName>Monthly_Auction</fullName>
    <active>true</active>
    <label>Monthly Auction</label>
</RecordType>