force-app/main/default/objects/Auction__c/recordTypes/Special_Auction.recordType-meta.xml
<RecordType>
    <fullName>Special_Auction</fullName>
    <active>true</active>
    <label>Special Auction</label>
</RecordType>