force-app/main/default/objects/Auction__c/validationRules/Auction_Date_Not_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Auction_Date_Not_Past</fullName>
    <active>true</active>
    <errorConditionFormula>Auction_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Auction_Date__c</errorDisplayField>
    <errorMessage>Auction Date must be today or later</errorMessage>
</ValidationRule>