force-app/main/default/objects/Auction__c/validationRules/Winner_For_Closed_Auction.validationRule-meta.xml
<ValidationRule>
    <fullName>Winner_For_Closed_Auction</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Closed&quot;),
    ISBLANK(Winner__c)
)</errorConditionFormula>
    <errorDisplayField>Winner__c</errorDisplayField>
    <errorMessage>Winner must be selected before closing the auction.</errorMessage>
</ValidationRule>